--- a/src/templates/cards.hbs
+++ b/src/templates/cards.hbs
@@ -1,25 +1,27 @@
 {{#each this}}
-<div class="photo-card">
-    <a class="gallery_item" href="{{largeImageURL}}">
+<li class="gallery_item">
+  <div class="photo-card">
+    <a  href="{{largeImageURL}}">
         <img class="gallery_img" src="{{webformatURL}}" alt="{{tags}}" title={{tags}}loading="lazy" />
     </a>  
   <div class="info">
     <p class="info-item">
-      <b>Likes</b>
+      <b class="icons">Likes</b>
       {{likes}}
     </p>
     <p class="info-item">
-      <b>Views</b>
+      <b class="icons">Views</b>
       {{views}}
     </p>
     <p class="info-item">
-      <b>Comments</b>
+      <b class="icons">Comments</b>
       {{comments}}
     </p>
     <p class="info-item">
-      <b>Downloads</b>
+      <b class="icons">Downloads</b>
       {{downloads}}
     </p>
   </div>
 </div>
+</li>
 {{/each}}
